--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="container">
+      <h1 class="title">Giphy API Practice</h1>
       <img src="#" />
+      <button class="refresh-button">New Gif!</button>
     </div>
     <script src="script.js"></script>
   </body>
