Adds gif search field.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <div class="container">
       <h1 class="title">Giphy API Practice</h1>
       <img src="#" />
-      <button class="refresh-button">New Gif!</button>
+      <button class="refresh-button">New Cat Gif!</button>
+      <form class="form" action="">
+        <input id="input" type="text" placeholder="Enter Desired Gif" />
+        <button class="search" type="submit">Search</button>
+      </form>
     </div>
     <script src="script.js"></script>
   </body>
