Adds basic styling for error.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <input id="input" type="text" placeholder="Enter Desired Gif" />
         <button class="search" type="submit">Search</button>
       </form>
+      <p class="error">
+        Sorry. Didn't find anything. Try again.
+      </p>
     </div>
     <script src="script.js"></script>
   </body>
